# LibAFL-legacy

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  c2rust-lib.rs  coding-style.md  compile_commands.json  libaflpp.h  libaflpp.so.c  meson.build  styleGuide.md
examples/: Makefile  README.md  Runtime.c  afl-compiler-rt-o.c  afl-compiler-rt.o.c  afl-forkerver-executor.c  afl-forkserver.h  afl_compiler_rt_o.rs  callgrind.out.1536  deprintf.c  example.c  executor  executor-example.c  executor.c  forking-fuzzer.c  forking_fuzzer.rs  in-memory-fuzzer.c  libaflfuzzer-harness-libpng.c  libaflfuzzer-harness-test.c  libaflfuzzer.c  libaflfuzzer.rs  libaflfuzzer_harness_libpng.rs  libaflfuzzer_harness_test.rs  llmp-main.c  llmp.c  llmp_main.rs  out-1714636915  out-846930886  prune_shm.sh  target  target.c  target.rs
examples/executors/: inmemory-executor.h
examples/feedbacks/: map-coverage-feedback.h
examples/in/: b
include/: afl-errors.h  afl-prealloc.h  afl-rand.h  afl-returns.h  afl-shmem.h  aflpp.h  alloc-inl.h  alloc.h  android-ashmem.h  cmplog.h  common.h  config.h  debug.h  debug.hpp  engine.h  error.h  errors.hpp  feedback.h  fuzzone.h  input.h  lib-common.h  lib-obserationchannel.h  libaflpp.h  libcommon.h  libengine.h  libfeedback.h  libfuzzone.h  libinput.h  libmutator.h  libobservationchannel.h  libos.h  libqueue.h  libstage.h  list.h  llmp.h  monitor.h  mutator.h  object.h  observationchannel.h  observer.h  (+12 more)
include/allocator/: allocator.h  shmem-allocator.h
include/corpus/: corpus.h  corpus.hpp  entry.h  entry.hpp  meta.h  queue.h  queue.hpp
include/engine/: engine.hpp  monitor.hpp
include/executor/: executor.h  executor.hpp  forkserver.h  forkserver.hpp  inmemory.h  inmemory.hpp
include/feedback/: feedback.h  feedback.hpp  map.hpp  mapmeta.hpp  maxmap.h  reducers.hpp
include/generator/: bytes.hpp  generator.hpp
include/input/: bytes.h  bytes.hpp  bytes_input.h  input.h  input.hpp
include/mutator/: havoc.h  havoc.hpp  mutator.h  mutator.hpp  scheduled.h  scheduled.hpp
include/observation_channel/: hitcounts.h  hitcounts.hpp  map.h  map.hpp  observation_channel.h  observation_channel.hpp
include/observer/: hitcounts.hpp  map.hpp  observation_channel.hpp
include/os/: ipc.h
include/platform/: exit.h  forkserver.hpp  fs.h  malloc.h  print.h  shmem.hpp  string.h  time.h
include/stage/: mutational.h  mutational.hpp  stage.h  stage.hpp
include/utils/: misc.hpp  random.hpp
include_old/: afl-returns.h  aflpp.h  android-ashmem.h  common.h  debug.h  mutator.h  queue.h  rand.h  shmem.h  xxh3.h
src/: aflpp.c  aflpp.rs  common.c  common.rs  engine.c  engine.rs  feedback.c  feedback.rs  fuzzone.c  fuzzone.rs  input.c  input.rs  lib-common.c  lib-observationchannel.c  libaflpp.c  libaflpp.so.c  libcommon.c  libengine.c  libfeedback.c  libfuzzone.c  libinput.c  libmutator.c  libobservationchannel.c  libos.c  libqueue.c  libstage.c  llmp.c  llmp.rs  main.cpp  mutator.c  mutator.rs  observationchannel.c  observer.c  observer.rs  os.c  os.rs  queue.c  queue.rs  shmem.c  shmem.rs  (+2 more)
src/corpus/: entry.cpp
src/engine/: engine.cpp
src/executor/: executor.c  forkserver.c  inmemory.c  inmemory.cpp
src/input/: input.cpp
src/mutator/: havoc.c  havoc.cpp  mutator.c  scheduled.c
src/observation_channel/: hitcounts.cpp
src/observer/: hitcounts.cpp
src/os/posix/: ipc.c
src/platform/posix/: android-ashmem.h  forkserver.cpp  shmem.cpp
src_old/: common.c  feedback.c  fuzzone.c  llmp.c  mutator.c  queue.c  stage.c
test/: Makefile  unit_llmp.c  unit_test  unit_test.c
test/corpus/: corpus.cpp
test/testcases/: test1  test2
test_old/: unit_test.c
